# GroupingChallenge

./: CMakeLists.txt  GaussianGroupingEvaluatorFactory.cpp  GaussianGroupingEvaluatorFactory.h  GroupingChallenge.cpp  GroupingChallenge.vcxproj  GroupingChallenge.vcxproj.filters  GroupingEvaluator.cpp  GroupingEvaluator.h  Point.h
myTask/: GeneticAlgorithm.cpp  GeneticAlgorithm.h  Individual.cpp  Individual.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h
